# otus_homework

./: .pre-commit-config.yaml  Makefile  pyproject.toml
.github/workflows/: blank.yml
log_analyzer/: log_analyzer.py
test/: test_log_analyzer.py
