[tool.poetry]
name = "log-analyzer"
version = "0.1.0"
description = "Script to analyze logs of nginx"
authors = ["Sergei Maslov <s.maslov@bi.zone>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
structlog = "^25.2.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
